--- a/modo-03/ex001-imagens/ex001.html
+++ b/modo-03/ex001-imagens/ex001.html
@@ -12,8 +12,8 @@
         {
             display: inline-block;/*para deixar a imagem de lado*/
             border: 2px solid black;
-            width: 300px;
-            height: 300px;
+            width: 300px; /*largura*/
+            height: 300px; /*altura*/
             border-radius: 10px;
             background-color: aquamarine;/*colocar cor dentro da tag*/
         }
