atualização do exercicio

--- a/projetos/projeto-002/index.html
+++ b/projetos/projeto-002/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <header>
+    <header> <!--cabeçario -->>
         <h1>
             Cordel Moderno
         </h1>
