--- a/projetos/projeto-002/index.html
+++ b/projetos/projeto-002/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <header> <!--cabeçario -->>
+    <header> <!--cabeçario -->
         <h1>
             Cordel Moderno
         </h1>
@@ -32,7 +32,7 @@
 
 
 
-<section class="imagem">
+<section class="imagem" id="img01">
     <p>
         Não é mais como era antes<br>
         É tudo abreviado<br>
@@ -70,7 +70,7 @@
 
 
 
-<section class="imagem">
+<section class="imagem" id="img02">
     <p>
         Tenho saudade das cartas<br>
         Escritas com a própria mão<br>
