--- a/modo-03/exer007-2-tabela/index.html
+++ b/modo-03/exer007-2-tabela/index.html
@@ -23,6 +23,10 @@
             text-align: center; /*direta (right) center (center) lesft(esquerda) [alinhamento horizontal */
             vertical-align:top ; /*top(em cima) bottom(em baixo) middle(centro)  */
         }
+        .numero
+        {
+            text-align: right;
+        }
     </style>
 </head>
 <body>
@@ -31,7 +35,7 @@
         <tr>
             <td>a1</td>
             <td>b1</td>
-            <td>c1</td>
+            <td class="numero">c1</td>
             <td>d1</td>
         </tr>
         <tr>
