--- a/modo-03/exer-007-1-tabela/exer01/index.html
+++ b/modo-03/exer-007-1-tabela/exer01/index.html
@@ -20,7 +20,7 @@
         table
         {
             width: 500px;
-            border-collapse:collapse ;
+            border-collapse:collapse ; /*deixar tag td juntas */
             margin: auto;
 
         }
