--- a/modo-03/ex005-shorthand/shorthad.html
+++ b/modo-03/ex005-shorthand/shorthad.html
@@ -8,7 +8,7 @@
     <style>
         body
         {
-            height: 100h;
+            height: 100vh;
            /* background-color: black;
             background-image: url('/modo-03/imagens/wallpaper002.jpg');
             background-position: center center;
@@ -37,7 +37,9 @@
         }
         main
         {
-            background-color: white;
+            background-color: white;background-image: url('/modo-03/ex004-mudando-o-tamanho-da-imagens/imagem-aleatoria/Spy-x-Family-Gqca.jpg');
+            background-size: cover;
+            background-position: right;
             width: 400px;
             padding: 10px;
             margin: auto;
