--- a/modo-04/apren-001/index.html
+++ b/modo-04/apren-001/index.html
@@ -71,5 +71,9 @@
         <iframe src="https://www.google.com.br/" frameborder="0"></iframe>
         <a href="https://www.google.com.br/">site do google</a>
     </p>
+    <p>
+        teste
+        <iframe src="index-02.html" frameborder="1"></iframe>
+    </p>
 </body>
 </html>
