--- a/modo-04/apren-002/pasta01/index.html
+++ b/modo-04/apren-002/pasta01/index.html
@@ -22,6 +22,10 @@
         /*
         para conseguir abrir as paginas no iframe vai ser usado na tag a junto dela a target com o nome que vc colocou dentro da tag iframe (name" o nome que vc quiser")
         */
+
+        /*
+        na tag srcdoc da para  colocar conteudo html e css para aparecer dentro da tag iframe(isso quando nao tiver nada mostrando.)
+        */
     </style>
 </head>
 <body>
@@ -40,12 +44,16 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel qui repudiandae ipsa eveniet magni recusandae ducimus esse consequuntur harum tempore, voluptatibus quas quo ipsam voluptatum numquam corrupti sint fugit expedita? Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, repellendus sequi ipsa repellat quisquam voluptatem obcaecati placeat minus ratione officia delectus sunt praesentium quis iure similique deleniti cum quia perferendis?</p>
 
-    <iframe id="tela" name="frame" src="" >
+    <iframe id="tela" name="frame" srcdoc="
+    <h1>Para ver mais coisa selesone uma da lista em cima</h1>
+    "  >
         <p> Infeslimente o seu navegador não é compativel com isso</p>
 
     </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum velit quidem repudiandae voluptates perspiciatis laudantium quo architecto! Beatae eaque ea iste, velit debitis explicabo reiciendis veniam sint dignissimos. Reprehenderit, vel. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus sunt vero cupiditate odit error, iste velit ducimus voluptatibus molestiae reiciendis voluptas qui? Ab corporis asperiores, laborum expedita a sint eius?</p>
+
+    
 
 
 
