--- a/projetos/projeto_modulo-4/pacote-d013/pacote-d013/proj_4/index.html
+++ b/projetos/projeto_modulo-4/pacote-d013/pacote-d013/proj_4/index.html
@@ -12,11 +12,31 @@
     
     <main >
         <section id="telefone">
-
+           <iframe src="/projetos/projeto_modulo-4/pacote-d013/pacote-d013/proj_4/home.html" frameborder="0" name="tela" id="tela"></iframe> 
         </section>
-        <SEction id="redes-sociais">
-            
-        </SEction>
+
+
+
+        <section id="redes-sociais">
+            <a href="#" target="tela" id="home">
+                <img src="../imagens/tela-home.jpg" alt="home">
+            </a> <br>
+            <a href="#" target="tela">
+                <img src="/projetos/projeto_modulo-4/pacote-d013/pacote-d013/imagens/logo-youtube.jpg" alt="youtube">
+            </a><br>
+            <a href="#" target="tela">
+                <img src="/projetos/projeto_modulo-4/pacote-d013/pacote-d013/imagens/logo-github.jpg" alt="git">
+            </a><br>
+            <a href="#" target="tela">
+                <img src="../imagens/logo-instagram.jpg" alt="instagra">
+            </a><br>
+            <a href="#" target="tela">
+                <img src="../imagens/logo-twitter.jpg" alt="twtter">
+            </a><br>
+            <a href="#" target="tela">
+                <img src="../imagens/tela-facebook.jpg" alt="tela-facebook">
+            </a>
+        </section>
     </main>
 </body>
 </html>
