--- a/modo-04/apren003/formulario/index001.html
+++ b/modo-04/apren003/formulario/index001.html
@@ -17,13 +17,19 @@
         usado o label para deixar conectado com o seu elemneto, assim fasilitando para as pesquisa.
         criando assim uma relação entre eles.
         */
+        /*
+        method="post" para senha (dados sensives,)
+        */
+        /*
+        method="get" para outras coisas
+         */
     </style>
 </head>
 <body>
     <h1>
         Meu priemiro Formulario
     </h1>
-    <form action="cadasto.php" autocomplete="off">
+    <form action="cadasto.php" method="post" autocomplete="off">
         <p><label for="inome">Nome:</label>
             <input type="text" name="nome" id="inome">
         </p>
