--- a/modo-04/media-queries/imagens/mq002/index.html
+++ b/modo-04/media-queries/imagens/mq002/index.html
@@ -10,10 +10,10 @@
     <!--vai da todas as configuraçao para modo retrato.-->
     <link rel="stylesheet" href="estilos/retrato.css" media="screen and (orientation:portrait)">    
     <!--vai da todas as configuraçao para modo paisagem.-->
-    <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientatin: landscape)">
+    <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientation:landscape)">
 </head>
 <body>
-    <h1>Mude a orientalçao do seu dispositivos</h1>
+    
 
 </body>
 </html>
