--- a/modo-04/media-queries/imagens/mq004/index.html
+++ b/modo-04/media-queries/imagens/mq004/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <h1>Testendo Media Queries</h1>
-        <img id="phone" src="imagens/icon-phone.png" alt="Acessando via smartphone">
+        <img id="phne" src="imagens/icon-phone.png" alt="Acessando via smartphone">
         <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via tablet">
         <img id="print" src="imagens/icon-print.png" alt="verção para impressão">
         <img id="pc" src="imagens/icon-pc.png" alt="versao para desktop">
