--- a/prog(BR)/modo001/index001.html
+++ b/prog(BR)/modo001/index001.html
@@ -9,6 +9,7 @@
 <body>
     
     <h1>muita coisa pra fazer</h1>
+    <p >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus impedit tempora perferendis consectetur cumque reiciendis, expedita ea quasi! Repudiandae autem quaerat voluptates quidem nemo quae ullam magnam doloribus fugit temporibus!</p>
 
     <figure>
     <img src="imagens/any-estilu.jpg" alt="Any-estilu">
